# vision-pipe

./: .gitignore  CMakeLists.txt  IP_STREAM_PLAN.md  Readme.md  Versys-GPL-License-v1.md  v4l2_native_plan.md
.github/workflows/: deploy-visionpipe-io.yml  pages.yml
cmake/: FindOnnxRuntime.cmake  VisionPipeConfig.cmake.in
docs/: index.html  libvisionpipe.md  visionpipe-docs.html  visionpipe-docs.json  visionpipe-docs.md
docs/ip-stream/: visionpipe-docs.html  visionpipe-docs.json  visionpipe-docs.md
examples/: CMakeLists.txt  advance_camera_process.vsp  camera_controls.vsp  camera_processing_algorithm.vsp  discovery_demo.vsp  dual_cam_debug.vsp  dual_cam_test.vsp  dual_cam_test_v2.vsp  example_libvisionpipe.cpp  example_pyvisionpipe.py  get-started.vsp  hello.vsp  image_classification.vsp  libcam_camera_props_calib.vsp  libvisionpipe_demo.vsp  object_detection.vsp  runtime_params_demo.vsp  simple_dnn_inference.vsp  stereo.vsp  stereo_multiprocess.vsp  stereo_stabilized.vsp  stereo_test.vsp  streaming_example.vsp  test_break_key.vsp  test_cache.vsp  test_gui.vsp  test_simple.vsp
examples/DNN/: README.md  mono_depth_estimation.vsp  yolov8_human_detection.vsp
include/extensions/iceoryx/: iceoryx_frame_transport.h  iceoryx_publisher.h  publish_frame_item.h
include/interpreter/: ast.h  builtin_items.h  cache_manager.h  interpreter.h  item_registry.h  lexer.h  param_server.h  param_store.h  parser.h  runtime.h  tensor_types.h
include/interpreter/items/: adaptive_brightness_items.h  advanced_items.h  all_items.h  arithmetic_items.h  auto_exposure_items.h  color_items.h  conditional_items.h  control_items.h  discovery_items.h  display_items.h  dnn_items.h  draw_items.h  edge_items.h  fastcv_items.h  feature_items.h  filter_items.h  frame_sink_items.h  gpu_debayer_items.h  gpu_stabilization_items.h  gpu_transform_items.h  gui_enhanced_items.h  ip_stream_items.h  libcamera_items.h  math_eval_items.h  morphology_items.h  shm_items.h  stabilization_items.h  stereo_items.h  tensor_items.h  transform_items.h  v4l2_items.h  video_io_items.h
include/interpreter/ml/: ml_model.h  model_registry.h  onnx_runtime_backend.h  opencv_dnn_backend.h  postprocessing.h  preprocessing.h
include/libvisionpipe/: discovery.h  frame_transport.h  libvisionpipe.h
include/pipeline/: pipeline.h  pipeline_base_items.h  pipeline_item.h  pipeline_threaded_group.h
include/utils/: Logger.h  camera_device_manager.h  http_frame_server.h  shm_frame_transport.h  shm_zero_copy.h  v4l2_device_manager.h
python/: pyvisionpipe.cpp
python/visionpipe/: __init__.py
rust-client/: Cargo.toml  IMPLEMENTATION.md  README.md
rust-client/examples/: basic_stream.rs  multi_sink.rs  params_control.rs
rust-client/src/: discovery.rs  error.rs  frame.rs  lib.rs  params.rs  session.rs  transport.rs  visionpipe.rs
src/cli/: doc_gen.cpp  doc_gen.h  gen_vscode_ext.cpp  main.cpp
src/extensions/iceoryx/: iceoryx_frame_transport.cpp  iceoryx_publisher.cpp  publish_frame_item.cpp
src/interpreter/: ast.cpp  builtin_items.cpp  cache_manager.cpp  interpreter.cpp  item_registry.cpp  lexer.cpp  param_server.cpp  param_store.cpp  parser.cpp  runtime.cpp
src/interpreter/items/: adaptive_brightness_items.cpp  advanced_items.cpp  all_items.cpp  arithmetic_items.cpp  auto_exposure_items.cpp  color_items.cpp  conditional_items.cpp  control_items.cpp  debayer_kernel.cl  discovery_items.cpp  display_items.cpp  dnn_items.cpp  draw_items.cpp  edge_items.cpp  fastcv_items.cpp  feature_items.cpp  filter_items.cpp  frame_sink_items.cpp  gpu_debayer_items.cpp  gpu_stabilization_items.cpp  gpu_transform_items.cpp  gui_enhanced_items.cpp  ip_stream_items.cpp  libcamera_items.cpp  math_eval_items.cpp  morphology_items.cpp  shm_items.cpp  stabilization_items.cpp  stereo_items.cpp  tensor_items.cpp  transform_items.cpp  v4l2_items.cpp  video_io_items.cpp
src/interpreter/ml/: ml_model.cpp  model_registry.cpp  onnx_runtime_backend.cpp  opencv_dnn_backend.cpp  postprocessing.cpp  preprocessing.cpp
src/libvisionpipe/: discovery.cpp  frame_transport.cpp  libvisionpipe.cpp
src/pipeline/: pipeline.cpp  pipeline_base_items.cpp  pipeline_item.cpp  pipeline_threaded_group.cpp
src/utils/: Logger.cpp  Logger.h  camera_device_manager.cpp  http_frame_server.cpp  shm_frame_transport.cpp  shm_zero_copy.cpp  v4l2_device_manager.cpp
utils-scripts/: _stream.vsp  camera_tuner.html  camera_tuner.py  requirements.txt
vscode-vsp/: README.md  extension.js  language-configuration.json  package.json  visionpipe-vsp-1.1.0.vsix  visionpipe-vsp-1.3.0.vsix
vscode-vsp/snippets/: vsp.json
vscode-vsp/syntaxes/: vsp.tmLanguage.json
